<resources>
    <string name="app_name">My Movie Memoir</string>
    <string name="menu_home">Home</string>
    <string name="menu_movie_search">Movie Search</string>
    <string name="menu_movie_memoir">Movie Memoir</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="menu_report">Reports</string>
    <string name="menu_map">Map</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="text_view_no_account">Don\'t have an account?</string>
    <string name="text_view_sign_up">Sign up</string>
    <string name="error_sign_in">Username/Password not match!\nPlease try again!</string>
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_gender">Gender</string>
    <string name="register_male">Male</string>
    <string name="register_female">Female</string>
    <string name="register_dob">Date of Birth</string>
    <string name="register_address">Address</string>
    <string name="register_postcode">Postcode</string>
    <string name="register_state">State</string>
    <string-array name="register_state_array">
        <item>ACT</item>
        <item>NSW</item>
        <item>NT</item>
        <item>QLD</item>
        <item>SA</item>
        <item>TAS</item>
        <item>WA</item>
        <item>VIC</item>
    </string-array>

    <string-array name="memoir_sort_array">
        <item>watching date ↓</item>
        <item>watching date ↑</item>
        <item>my rating ↓</item>
        <item>my rating ↑</item>
        <item>public rating ↓</item>
        <item>public rating ↑</item>
    </string-array>

    <string-array name="year_spinner_array">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string name="register_username">Email as Username</string>
    <string name="register_password">Set password:</string>
    <string name="register_passwordCheck">Enter password again:</string>
    <string name="success_delete">Delete successfully!</string>
    <string name="success_add_cinema">Add cinema successfully!</string>
    <string name="success_add_memoir">Add to memoir successfully!</string>
    <string name="success_add_watchlist">Add to watchlist successfully!</string>
    <string name="success_sign_up">Sign up successfully!</string>
    <string name="error_passwordCheck">Password entered not match!\nPlease try again!</string>
    <string name="error_username">Username not available!\nPlease try again!</string>
    <string name="error_username_empty">Username empty!\nPlease try again!</string>
    <string name="error_first_name_empty">First name empty!\nPlease try again!</string>
    <string name="error_last_name_empty">Last name empty!\nPlease try again!</string>
    <string name="error_gender_empty">Gender empty!\nPlease try again!</string>
    <string name="error_dob_empty">Date of birth empty!\nPlease try again!</string>
    <string name="error_date_empty">Watching date empty!\nPlease try again!</string>
    <string name="error_address_empty">Address empty!\nPlease try again!</string>
    <string name="error_postcode_empty">Postcode empty!\nPlease try again!</string>
    <string name="error_cinema_empty">Cinema name empty!\nPlease try again!</string>
    <string name="error_cinema_exist">Cinema added already exists!\nPlease make choice!</string>
    <string name="error_password_length">Password length not between 1 and 16!\nPlease try again!</string>
    <string name="error_postcode_format">Postcode not a four digit number!\nPlease try again!</string>
    <string name="error_movie_exist">This movie already exists in the watchlist!\nNo need to add!</string>
    <string name="error">Error!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="movies_by_month">Total Movies Watched per Month</string>
    <string name="year">Year</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="movies_by_suburb">Total Movies Watched per Suburb</string>
    <string name="app_logo">My Movie\nMemoir</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="default_date">1900/1/1</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_release">Release Date</string>
    <string name="rating">Rating Score</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_movie_hint">Search a movie</string>
    <string name="search_movie_image">Poster</string>
    <string name="search_movie_date">Release year</string>
    <string name="unknown">Unknown</string>
    <string name="button_add_watchlist">Add to Watchlist</string>
    <string name="button_add_memoir">Add to Memoir</string>
    <string name="cast_heading">"Cast: "</string>
    <string name="director_heading">"Director: "</string>
    <string name="genre_heading">"Genre: "</string>
    <string name="country_heading">"Country: "</string>
    <string name="release_heading">"Release Date: "</string>
    <string name="overview_heading">"Synopsis: "</string>
    <string name="rating_heading">"Rating "</string>
    <string name="tweets_heading">"Recent Tweets: "</string>
    <string name="watching_date">Watching Date</string>
    <string name="watching_time">Watching Time</string>
    <string name="cinema">Cinema</string>
    <string name="add_comments">Comment</string>
    <string name="submit">Submit</string>
    <string name="comment">Comment</string>
    <string name="submit_to_memoir">Submit to Memoir</string>
    <string name="tweets_hint">"Recent tweets? Click"</string>
    <string name="here">here.</string>
    <string name="cinema_not_found">Cinema not found?</string>
    <string name="add">Add</string>
    <string name="add_cinema">Add cinema</string>
    <string name="cinema_name">Cinema name</string>
    <string name="confirm">Confirm</string>
    <string name="cinema_postcode">Cinema Postcode</string>
    <string name="comment_heading">"Comment: "</string>
    <string name="my_rating_heading">My Rating:</string>
    <string name="public_rating_heading">Public Rating:</string>
    <string name="filter_genre">"Genre: "</string>
    <string name="watchlist_added_heading">Added Time</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="menu_settings">Settings</string>
    <string name="tv_forget">Forget login details?</string>
    <string name="get_help">Get help.</string>
    <string name="create_account">Create An Account</string>
    <string name="add_memoir">Add a Memoir</string>
    <string name="public_rating">Public Rating</string>
    <string name="select_region">Select a Region</string>
    <string name="select_state">Select a State</string>
</resources>
