<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignUpActivity">

    <ScrollView
        android:id="@+id/scrollRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_account">

        <LinearLayout
            android:id="@+id/linearLayoutRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etRegisterFirstName"
                android:background="@drawable/text_background"
                android:paddingHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/register_firstName"
                android:inputType="text"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/etRegisterLastName"
                android:background="@drawable/text_background"
                android:paddingHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/register_lastName"
                android:inputType="text"
                android:textAllCaps="false" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/register_gender"
                android:padding="5dp"
                android:textAllCaps="false" />

            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/bt_radio_male"
                    android:paddingHorizontal="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_male" />

                <RadioButton
                    android:id="@+id/bt_radio_female"
                    android:layout_marginStart="25dp"
                    android:paddingHorizontal="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_female" />

            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:text="@string/register_dob" />

                <ImageView
                    android:id="@+id/imageDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    app:srcCompat="@drawable/ic_date_range" />

            </LinearLayout>

            <CalendarView
                android:id="@+id/calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="visible"
                tools:visibility="gone" />

            <EditText
                android:id="@+id/etRegisterAddress"
                android:background="@drawable/text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/register_address"
                android:inputType="text"/>

            <LinearLayout
                android:id="@+id/LinearLayoutState"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:text="@string/register_state" />
                <Spinner
                    android:id="@+id/spinner_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginStart="12dp"
                    android:layout_gravity="center"
                    android:entries="@array/register_state_array" />
            </LinearLayout>

            <EditText
                android:id="@+id/etRegisterPostcode"
                android:background="@drawable/text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/register_postcode"
                android:inputType="number"/>

            <EditText
                android:id="@+id/etRegisterUsername"
                android:background="@drawable/text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="5dp"
                android:hint="@string/register_username"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:id="@+id/linearLayoutPwRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etRegisterPassword"
                    android:background="@drawable/text_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_visibility_off"
                    android:gravity="start"
                    android:paddingHorizontal="5dp"
                    android:hint="@string/register_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPwCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etCheckPassword"
                    android:background="@drawable/text_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_visibility_off"
                    android:gravity="start"
                    android:paddingHorizontal="5dp"
                    android:hint="@string/register_passwordCheck"
                    android:inputType="textPassword" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#377AFF"
        android:text="@string/button_sign_up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#000000"
        android:padding="32dp"
        app:layout_constraintStart_toStartOf="@+id/btSignUp"
        app:layout_constraintEnd_toEndOf="@id/btSignUp"
        app:layout_constraintBottom_toTopOf="@id/btSignUp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/buttontest"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/scrollRegister"
        app:layout_constraintEnd_toStartOf="@+id/tv_create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_create_account" />


</androidx.constraintlayout.widget.ConstraintLayout>