<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:id="@+id/view_scrollView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btAddWatchlist1"
        app:layout_constraintEnd_toEndOf="@+id/btAddWatchlist1"
        app:layout_constraintStart_toStartOf="@+id/btAddWatchlist1"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_view_poster1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_launcher_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_view_director_heading1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/director_heading"
                        android:textColor="#000000"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/tv_view_director1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/unknown" />

                    <TextView
                        android:id="@+id/tv_view_genre_heading1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/genre_heading"
                        android:textColor="#000000"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/tv_view_genre1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/unknown" />

                    <TextView
                        android:id="@+id/tv_view_country_heading1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/country_heading"
                        android:textColor="#000000"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/tv_view_country1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/unknown" />

                    <TextView
                        android:id="@+id/tv_view_date_headin1g"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/release_heading"
                        android:textColor="#000000"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/tv_view_date1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_view_cast_heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cast_heading"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_view_cast1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/unknown" />

            <TextView
                android:id="@+id/tv_view_overview_heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overview_heading"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_view_overview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/unknown" />

            <TextView
                android:id="@+id/tv_tweets_heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tweets_heading"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btAddWatchlist1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#377AFF"
        android:text="@string/button_add_watchlist"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

</androidx.constraintlayout.widget.ConstraintLayout>