<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/homepage_background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_home_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date"
        android:layout_gravity="left"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="98dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/top_five_movies"
        android:textColor="#FFFFFF"
        android:textSize="35dp"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/movie_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/movie_release"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="#FFFFFF"
            android:text="@string/rating"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="150dp"
        android:scrollbars="vertical"
        tools:visibility="visible" />
</LinearLayout>